@@ -72,6 +72,7 @@
       <label>PLAYER</label>
       <visible>Player.HasAudio | Player.HasVideo | VideoPlayer.Content(LiveTV)</visible>
       <onclick>ActivateWindow(1135)</onclick>
+      <onclick_off>ActivateWindow(playercontrols)</onclick_off>
       <icon>$VAR[PlayerControlBG]</icon>
     </item>
     <item id="14">
@@ -1910,6 +1911,60 @@
       <onup>20</onup>
       <ondown>608</ondown>
       <visible>false</visible>
+    </control>
+    <!--Track Info-->
+    <control type="group">
+      <visible>Player.HasAudio + !Skin.HasSetting(homepageMusicinfo) + String.IsEmpty(Window(Videos).Property(PlayingBackgroundMedia))</visible>
+      <left>20</left>
+      <!--cover-->
+      <control_off type="image">
+        <description>cover image</description>
+        <left>20</left>
+        <top>30</top>
+        <width>450</width>
+        <height>450</height>
+        <texture fallback="DefaultAlbumCover.png">$INFO[Player.Art(thumb)]</texture>
+        <bordertexture border="8">ThumbShadow.png</bordertexture>
+        <bordersize>8</bordersize>
+      </control_off>
+      <!-- the music title -->
+      <control type="label">
+        <left>365</left>
+        <top>220r</top>
+        <width>885</width>
+        <height>70</height>
+        <font>font35_title</font>
+        <align>right</align>
+        <aligny>center</aligny>
+        <label>$INFO[Player.Time(hh:mm:ss)] / $INFO[Player.Duration(hh:mm:ss)]</label>
+        <textcolor>$VAR[TextColor2]</textcolor>
+        <shadowcolor>black</shadowcolor>
+      </control>
+      <control type="label">
+        <description>Title label</description>
+        <left>365</left>
+        <top>180r</top>
+        <width>885</width>
+        <height>50</height>
+        <font>font55_title</font>
+        <align>right</align>
+        <scroll>true</scroll>
+        <label>$INFO[Player.Title]</label>
+        <textcolor>$VAR[TextColor2]</textcolor>
+        <shadowcolor>black</shadowcolor>
+      </control>
+      <control type="label">
+        <description>Artist label</description>
+        <left>365</left>
+        <top>110r</top>
+        <width>885</width>
+        <height>50</height>
+        <align>right</align>
+        <font>font35_title</font>
+        <label>$INFO[MusicPlayer.Artist]$INFO[MusicPlayer.Album, - ]</label>
+        <textcolor>$VAR[TextColor2]</textcolor>
+        <shadowcolor>black</shadowcolor>
+      </control>
     </control>
     <!--MAIN MENU UP-->
     <control type="group">
