@@ -1,3 +1,6 @@
+[B]1.0.17[/B]
+- added Title, Artist and Tracktime Labels for Home
+
 [B]1.0.16[/B]
 - Outside-Temp and Clock for Video and Music Fullscreen
 
